<resources>
    <string name="app_name">First Line of Support</string>
    <string name="login_button">Login</string>
    <string name="loginTextEmail">Login</string>
    <string name="don_t_have_an_acccount_signup_now">Don\'t have an acccount? Signup Now?</string>
    <string name="aaaa">AAAA</string>
    <string name="Usernamelabel">E-Mail login</string>
    <string name="Passwordlabel">Password</string>
    <string name="content_description_end_icon">Show password symbols</string>
    <string name="email_input_error">Invalid Email Address or Username</string>
    <string name="empty_username_error">Please enter your username</string>
    <string name="empty_password_error">Please enter your password</string>
    <string name="password_input_error">Minimum password length should be 5 characters.</string>
    <string name="settings">Settings</string>
    <string name="already_have_an_acccount_login">Already have an acccount ? Login ?</string>
    <string name="connection_status_error">WiFi or GSM are not active!</string>
    <string name="battery_low">Battery low</string>
    <string name="power_conn">Power cable is connected</string>
    <string name="power_dsc">Power cable is disconnected</string>
    <string name="connection_status_ok">WiFi or GSM are is active!</string>
    <string name="navigation_drawer_open">Drawer Opened</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="loading">\tLoading…</string>
    <string name="nav_menu_tools">Tools</string>
    <string name="nav_menu_tasks">Tasks</string>
    <string name="nav_menu_message">Messages</string>
    <string name="nav_menu_tickets">Tickets</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="rbg_name">Priority Ticket</string>
    <string name="prior_1">Blocked</string>
    <string name="prior_2">Critical</string>
    <string name="prior_3">Hight</string>
    <string name="prior_4">Middle</string>
    <string name="prior_5">Low</string>
    <string name="string_new_ti">Create Ticket</string>
    <string name="UserPhone">Phone Number</string>
    <string name="TiTitle">Title</string>
    <string name="btn_save">Save</string>
    <string name="Label_email">User Email</string>
    <string name="Label_phone">User Phone</string>
    <string name="Label_ticket">Ticket Title</string>
    <string name="Label_ti_text">Ticket Description</string>
    <string name="profile">Profile</string>
    <string name="send">Send</string>
    <string name="register_button">Register</string>
    <string name="empty_phone_error">Please enter your mobile phone number</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="INNlabel">INN</string>
    <string name="TabNumLabel">Tabel Number</string>
    <string name="CPLabel">Company post</string>
    <string name="RegionLabel">Region Location</string>
    <string name="saveUInfo_button">Save</string>
    <string name="recent_code">Confirm</string>
    <string name="user_id">User ID:</string>
    <string name="e_mail">E-Mail:</string>
    <string name="work">Phone:</string>
    <string name="inn">INN:</string>
    <string name="your_ip">Your IP:</string>
    <string name="tabel_num">Tabel NUM:</string>
    <string name="company_post">Company post:</string>
    <string name="permited">Permited:</string>
    <string name="date_last_password">Date last password:</string>
    <string name="ticcket_title">Ticket: #</string>
    <string name="account_type" translatable="false">flost_user</string>
    <string name="success_save">Saved success</string>
    <string name="MockString">You are only allowed plus, numbers and spaces and the phone number must be at least 5 characters long e.g. +44 3422342 234234</string>
    <string name="MockDAte" translatable="false">2020-02-03</string>
    <string name="_8942" translatable="false">⋮</string>
    <string name="view_ticket">View ticket</string>
    <string name="execute_ticket">Execute ticket</string>
    <string name="redirect_ticket">Redirect ticket</string>
    <string name="logout_btn">Logout</string>
    <string name="string_new_task">New task</string>
    <string name="task_error_empty" translatable="false">Task required</string>
    <string name="add_a_task">Add a Task</string>
    <string name="task">Task title</string>
    <string name="complete_the_task_on_time">Complete the task on time</string>
    <string name="taskDescription">Task description…</string>
    <string name="update_task">Update Task</string>
    <string name="mark_as_finished">Mark as finished</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not Completed</string>
    <string name="default_notification_channel_id" translatable="false">Tickets</string>
    <string name="default_notification_channel_name" translatable="true">Tickets</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_subscribed" translatable="false">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed" translatable="false">Failed to subscribe to weather topic</string>
    <string name="status_open">Opened</string>
    <string name="status_process">Processed</string>
    <string name="status_redirected">Redirected</string>
    <string name="status_closed">Cosed</string>
    <string name="status_1">Open</string>
    <string name="status_2">Process</string>
    <string name="status_3">Redirect</string>
    <string name="status_4">Close</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="label_priority">Priority</string>
    <string name="label_status">Status</string>
    <string name="label_date">Created</string>
    <string name="label_uphone">Phone</string>
    <string name="label_email">Email</string>


</resources>
