<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
    <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_add_alert_black_24dp"
            android:title="@string/nav_menu_tickets" />
<!--        <item-->
<!--            android:id="@+id/nav_messages"-->
<!--            android:icon="@drawable/ic_message_black_24dp"-->
<!--            android:title="@string/nav_menu_message" />-->
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_menu_tasks" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/nav_menu_tools" />
        <item
            android:id="@+id/menuLogout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout_btn" />

    </group>
</menu>